-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.14.0
-
RHEL 8
multi-hop network
hops not set
-
3
-
9223372036854775807
We have the following configuration:
2.14_servers == o2ib100 == 2.12_routers == tcp129 == 2.12_routers == o2ib18 == 2.12_clients
Discovery is disabled, and the routes are configured statically, on all the systems.
This causes LNet to complain vociferously on the console from lnet_check_route_inconsistency()
LNet: 29144:0:(router.c:384:lnet_check_route_inconsistency()) route o2ib18->172.19.1.54@o2ib100 is detected to be multi-hop but hop count is set to -1
If LNet is configured so that there is only one route to any given endpoint, even on a multi-hop network, there is no value to spending sysadmin time determining and setting the hop counts as far as I can tell. And setting hops is optional according to the Lustre Operations Manual.
Is hop count actually required in 2.14 due to LU-13029 and LU-13785?
- is depended on by
-
DDN-7003 Loading...