LU-14555 lnet: emit CDEBUG for hops == LNET_UNDEFINED_HOPS

lnet_check_route_inconsistency() checks for inconsistency between
lr_hops and route->lr_single_hop.

The warning should not be emitted if lr_hops is LNET_UNDEFINED_HOPS
which means the admin didn't manually configure a hop count. Setting
hop count is optional.

Test-Parameters: trivial
Signed-off-by: Olaf Faaland <faaland1@llnl.gov>
Change-Id: Ie97cace989b5a40d4e68dddc843b904b1e6ac14a